# csail-hackathon-clawblox

./: .gitignore  API.md  PIPELINE_AGENT.md  README.md  RoboCasa_README.md  SOUL.md  cmd.md  controller.py  dual_panda_scene.py  g1_dds.py  install.sh  launch_multi_generations_claude.sh  mujoco_recording.py  panda_setup.py  pick_and_place.py  pipeline.py  pipeline_agent.sh  pyproject.toml  replay.py  robocasa_server.py  robocasa_setup.py  run_agent.py  run_agent_generations.py  run_replay.py  run_robocasa_viewer.py  run_seedance.py  run_viewer.py  run_web_replay.py  run_with_viewer.py  server.py  sim_client.py  sim_cmd.py  sim_server.py  sim_state.py  smoke_test.py  spectate.py  spectator_render.py  webapp.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/: Dockerfile  LICENSE  README.md  docker-compose.yaml  pick-conda-deps.txt  pos_1_low_light_traj_stats.npz  pos_1_traj_stats.npz  pos_5_traj_stats.npz  pyproject.toml  traj_stats.npz
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/demo/: interface.py  pick.py  pick_brick_emily.py  pick_place.py  pick_place_brick_nav.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/scripts/: compare_segmentation.py  demo_interface.py  estimate_reachability.py  g1_terminal_interface.py  generate_aruco_markers.py  generate_lighting_variations.py  pick_and_place.py  realsense_test.py  take_pictures.py  test_aruco_localization.py  track_trajectories.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/scripts/templates/: index.html
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/src/bricklaying/assets/: flat_brick_large.npy  flat_brick_large.stl  gray_brick_large.npy  gray_brick_large.stl  red_brick_large.npy  red_brick_large.stl  stl_to_npy.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/src/bricklaying/msgs/: _Image__.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/src/bricklaying/navigation/: __init__.py  location_registry.py
worlds/unitree-mujoco/agent-template/G1-Bricklaying-Simulation/src/bricklaying/perception/: __init__.py  aruco_localizer.py  icp.py  pose_estimation.py  realsense.py  sim_realsense.py
(+111 files in other folders)
