[project]
name = "clawblox"
version = "0.1.0"
description = "MuJoCo Panda + Robocasa Clawblox bridge"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "h5py>=3.12",
    "mujoco>=3.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "uvicorn>=0.30",
    "robosuite",
    "robocasa",
]

[tool.uv.sources]
robosuite = { git = "https://github.com/ARISE-Initiative/robosuite" }
robocasa = { path = "vendor/robocasa", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.27",
]
