[project]
name = "csail-hackathon-clawblox"
version = "0.1.0"
description = "MuJoCo Panda sandbox for Clawblox-style agents."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "fastapi>=0.115",
  "h5py>=3.12",
  "httpx>=0.27",
  "mujoco>=3.2",
  "numpy>=2.0",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
]
