[project]
name = "csail-hackathon-clawblox"
version = "0.1.0"
description = "MuJoCo Panda sandbox for Clawblox-style agents."
requires-python = ">=3.11"
dependencies = [
  "clawblox",
  "fastapi>=0.115",
  "h5py>=3.12",
  "mjviser>=0.0.14",
  "mujoco>=3.2",
  "numpy>=2.0",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
]

[tool.uv]
override-dependencies = [
  "embreex; sys_platform != 'linux' or platform_machine != 'aarch64'",
]

[tool.uv.sources]
clawblox = { path = "../clawblox/python/clawblox", editable = true }
