[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g1-bricklaying"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bricklaying" = [
    "assets/**/*.json",
    "assets/**/*.md",
    "assets/**/*.npy",
    "assets/**/*.png",
    "assets/**/*.stl",
    "assets/**/*.STL",
    "assets/**/*.urdf",
    "assets/**/*.xml",
    "assets/**/*.yaml",
]
